Added few tweaks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="header">
       <h1 class="main-title">25 + 5 Work Timer</h1>
       <div class="icons-container">
-        <a href="#" class="fab fa-3x fa-github icons"></a>
+        <a
+          href="https://github.com/edy-gavrila/freeCodeCamp-25-plus-5-clock"
+          class="fab fa-3x fa-github icons"
+        ></a>
         <a href="#" class="fab fa-3x fa-twitter icons"></a>
       </div>
     </div>
