--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
           href="https://github.com/edy-gavrila/freeCodeCamp-25-plus-5-clock"
           class="fab fa-2x fa-github icons"
         ></a>
-        <a href="#" class="fab fa-2x fa-twitter icons"></a>
+        <a
+          href="https://twitter.com/eduard_gavrila"
+          class="fab fa-2x fa-twitter icons"
+        ></a>
       </div>
     </div>
 
@@ -43,7 +46,7 @@
 
       <div class="center-buttons-container">
         <button class="controls">
-          <i class="fas fa-3x fa-play" id="start"></i>
+          <i class="fas fa-3x fa-play" id="start_stop"></i>
         </button>
         <button class="controls">
           <i class="fas fa-3x fa-pause" id="pause"></i>
@@ -65,13 +68,12 @@
       </div>
     </div>
     <div class="footer-credits">by Eduard Gavrila</div>
-    <audio id="audio">
+    <audio id="beep">
       <source
         src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/audio/BeepSound.wav"
         type="audio/wav"
       />
     </audio>
-    <script src=" https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
